finishing up cheat sheet

--- a/index.html
+++ b/index.html
@@ -5,5 +5,13 @@
 		<script src="js/scripts.js"></script>
 	</head>
 	<body>
+
+
+		<button onclick="myFunction()">Try it</button>
+
+		<p id="test"></p>
+
+		
+
 	</body>
 </html>
